--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   left: 0;
   z-index: 99999999999;
   width: 0;
-  height: 3px;
-  background-color: #66a0ff;
-  opacity: 0.6;
+  height: 5px;
+  background-color: #125096d3;
 }
